[metadata]
name = streamlit-elements-fluence
version = attr: streamlit_elements_fluence.__version__
description = React Components for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://fluence.world
url = https://github.com/acschofield/streamlit-elements-fluence
author = okld
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    streamlit >= 1.4.0
